doc: add info about custom predefined data

--- a/.chezmoidata.yaml
+++ b/.chezmoidata.yaml
@@ -1,3 +1,16 @@
-git:
-  email: "p.augustocampos@gmail.com"
-  name: "Pedro Campos"
+# this file is loaded after everything, but before rendering the templates
+# it is used to set variables that are used in the templates
+# IT IS LOADED AFTER .chezmoi.yaml.tmpl file.
+
+# Then, in the `dot_gitconfig.tmpl` file, you can use the variables defined
+# here.
+#
+# In this case, `.git.name` will be loaded from `~/.config/chezmoi.yaml`,
+# and if it doesn't exist, it will be set to the default value (this file).
+#
+# name = {{ .git.name | default .default.git.name }}
+
+# default:
+#   git:
+#     email: "p.augustocampos@gmail.com"
+#     name: "Pedro Campos"
