feat: add script to output current date and time in ISO 8601 format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "yaml.schemas": {
     "https://raw.githubusercontent.com/evilmartians/lefthook/master/schema.json": "file:///home/ppcamp/.local/share/chezmoi/.lefthook.yaml"
-  }
+  },
+  "python.analysis.typeCheckingMode": "strict",
+  "python.analysis.autoImportCompletions": true
 }
