feat: make chezmoi ignore files more robust
With this, zsh only will load if we setup it.

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -2,6 +2,11 @@ tools/
 data/
 README.md
 BREAKING_CHANGES.md
+LICENSE
 docs/
 .lefthook.yaml
 zshrc.example
+
+{{ if .configs.disable.zsh }}
+.config/shell
+{{ end }}
