feat: add kitty shortcuts

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -24,6 +24,15 @@ font_family JetBrainsMono Nerd Font
 font_size 12.0
 bold_font auto
 italic_font auto
+# for cursor shape, check if starship, zsh or something else ins't changing it
+cursor_shape block
+cursor_blink_interval 0.5
+# if using ubuntu with wayland, either set linux_display_server=x11
+# or install kitty v0.42.1, since deb version of it, 0.32.2-1ubuntu0.3
+# do not render minimize,maximize,close buttons
+hide_window_decorations yes
+linux_display_server wayland
+wayland_titlebar_color black
 
 # tab_title_template {layout_name}{title}
 # Set a huge scrollback buffer lines (The buffer after clear, e.g.,  100000)
@@ -38,6 +47,14 @@ scrollback_lines 100000
 
 tab_bar_style powerline
 # or separator
+
+#prev command
+map ctrl+PageUp scroll_to_prompt -1
+map ctrl+PageDown scroll_to_prompt 1
+map ctrl+home scroll_home
+map ctrl+end scroll_end
+# --stdin-add-formatting
+map f1 launch --stdin-source=@screen_scrollback --type=overlay nvim +$
 
 ### tab shorcuts
 map alt+1 goto_tab 1
