feat: custom personalizations to kitty

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -34,17 +34,29 @@ hide_window_decorations yes
 linux_display_server wayland
 wayland_titlebar_color black
 
-# tab_title_template {layout_name}{title}
+background_tint         0.97
+background_tint_gaps    -10.0
+window_border_width     1pt
+active_border_color     #44ffff
+window_margin_width     2
+single_window_margin_width 0
+
 # Set a huge scrollback buffer lines (The buffer after clear, e.g.,  100000)
 # ctrl+shift+delete clear the pagecmd output
 scrollback_lines 100000
 
 # Enable hardware acceleration for faster rendering
-#use_freetype_in_rendering yes
+use_freetype_in_rendering yes
 
-# Hide the tab bar by default (optional)
+# background_opacity 0.8
+# background_blur 10
+# See https://sw.kovidgoyal.net/kitty/conf/#opt-kitty.tab_title_template
+tab_title_template "{index}: {title.split('/')[-1].split(':')[-1]}"
+# active_tab_title_template "{index}: {tab.active_oldest_exe}"
+tab_bar_background none
 #hide_tab_bar false
-
+tab_title_max_length 50
+tab_powerline_style round
 tab_bar_style powerline
 # or separator
 
