--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -92,6 +92,6 @@ disabled = true
 [status]
 style = 'fg:red'
 symbol = '🚨 '
-format = '[\[$symbol$signal_name$maybe_int\]]($style) '
+format = '[\[$symbol$signal_name$int\]]($style) '
 map_symbol = true
 disabled = false
