feat: add kitty theme config

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -16,7 +16,7 @@
 # include ./theme.conf
 
 # BEGIN_KITTY_THEME
-# Rosé Pine
+# Eldritch dark
 include current-theme.conf
 # END_KITTY_THEME
 
@@ -32,12 +32,12 @@ cursor_blink_interval 0.5
 # do not render minimize,maximize,close buttons
 hide_window_decorations yes
 linux_display_server wayland
-wayland_titlebar_color black
+# wayland_titlebar_color black
 
 background_tint         0.97
 background_tint_gaps    -10.0
 window_border_width     1pt
-active_border_color     #44ffff
+# active_border_color     #44ffff
 window_margin_width     2
 single_window_margin_width 0
 
@@ -53,7 +53,7 @@ use_freetype_in_rendering yes
 # See https://sw.kovidgoyal.net/kitty/conf/#opt-kitty.tab_title_template
 tab_title_template "{index}: {title.split('/')[-1].split(':')[-1]}"
 # active_tab_title_template "{index}: {tab.active_oldest_exe}"
-tab_bar_background none
+# tab_bar_background none
 #hide_tab_bar false
 tab_title_max_length 50
 tab_powerline_style round
