fix: showing wayland always for kitty

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -31,7 +31,7 @@ cursor_blink_interval 0.5
 # or install kitty v0.42.1, since deb version of it, 0.32.2-1ubuntu0.3
 # do not render minimize,maximize,close buttons
 hide_window_decorations yes
-linux_display_server wayland
+# linux_display_server wayland
 # wayland_titlebar_color black
 
 background_tint         0.97
