feat: new shortcuts nvim

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -16,7 +16,7 @@
 # include ./theme.conf
 
 # BEGIN_KITTY_THEME
-# Eldritch dark
+# Monokai Soda
 include current-theme.conf
 # END_KITTY_THEME
 
@@ -68,6 +68,17 @@ map ctrl+end scroll_end
 # --stdin-add-formatting
 map f1 launch --stdin-source=@screen_scrollback --type=overlay nvim +$
 
+# markers
+map f3>c create_marker
+map f3>d remove_marker
+map f3>n scroll_to_mark next
+map f3>p scroll_to_mark prev
+
+# sessions (note that it must have a .kitty-session extension)
+map ctrl+q>s save_as_session --save-only --base-dir ~/.kitty-sessions
+map ctrl+q>/ goto_session ~/.kitty-sessions
+map ctrl+q>- goto_session -1
+
 ### tab shorcuts
 map alt+1 goto_tab 1
 map alt+2 goto_tab 2
@@ -106,6 +117,7 @@ map alt+shift+kp_multiply launch --location=split --cwd=current
 
 # alias to ctrl+shift+escape
 map ctrl+shift+F3 kitty_shell window
+
 
 # Set the bias of the split containing the currently focused window. The
 # currently focused window will take up the specified percent of its parent
